page one almost done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,15 @@
 {
     "cSpell.words": [
         "allowfullscreen",
+        "app",
+        "appstore",
+        "iphone",
         "iphones",
+        "macbook",
+        "macbookbackground",
+        "playsinline",
+        "section",
+        "store",
         "videobackground"
     ]
 }
