--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "allowfullscreen",
         "app",
         "appstore",
+        "backtoschool",
+        "imac",
+        "ipadpro",
         "iphone",
         "iphones",
         "macbook",
