footer half done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
+        "acmi",
         "allowfullscreen",
         "app",
         "appstore",
+        "aprs",
         "backtoschool",
         "imac",
         "ipadpro",
@@ -10,6 +12,7 @@
         "iphones",
         "macbook",
         "macbookbackground",
+        "netmarble",
         "playsinline",
         "section",
         "store",
